--- a/store/products/templates/products/products.html
+++ b/store/products/templates/products/products.html
@@ -2,11 +2,11 @@
 {% load static %}
 
 {% block css %}
-    <link href="{% static 'vendor/css/products.css' %}" rel="stylesheet">
+<link href="{% static 'vendor/css/products.css' %}" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
-    <div class="container">
+<div class="container">
 
     <div class="row">
 
@@ -15,7 +15,7 @@
             <h1 class="my-4">Store</h1>
             <div class="list-group">
                 {% for category in categories %}
-                    <a href="{% url 'products:category' category.id %}" class="list-group-item">{{ category.name }}</a>
+                <a href="{% url 'products:category' category.id %}" class="list-group-item">{{ category.name }}</a>
                 {% endfor %}
             </div>
 
@@ -32,13 +32,16 @@
                 </ol>
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
-                        <img class="d-block img-fluid" src="{% static 'vendor/img/slides/slide-1.jpg' %}" alt="First slide">
+                        <img class="d-block img-fluid" src="{% static 'vendor/img/slides/slide-1.jpg' %}"
+                             alt="First slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block img-fluid" src="{% static 'vendor/img/slides/slide-2.jpg' %}" alt="Second slide">
+                        <img class="d-block img-fluid" src="{% static 'vendor/img/slides/slide-2.jpg' %}"
+                             alt="Second slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block img-fluid" src="{% static 'vendor/img/slides/slide-3.jpg' %}" alt="Third slide">
+                        <img class="d-block img-fluid" src="{% static 'vendor/img/slides/slide-3.jpg' %}"
+                             alt="Third slide">
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -53,8 +56,8 @@
 
             <div class="row">
 
-                {% for product in products %}
-                    <div class="col-lg-4 col-md-6 mb-4">
+                {% for product in object_list %} <!--object_list - Product.objects.all()-->
+                <div class="col-lg-4 col-md-6 mb-4">
                     <div class="card h-100">
                         <a href="#">
                             <img class="card-img-top"
@@ -80,29 +83,29 @@
 
 
             </div>
-
+            {% if is_paginated %}
             <nav aria-label="Page navigation example">
                 <ul class="pagination justify-content-center">
-                    <li class="page-item {% if not products.has_previous %} disabled {% endif %}">
+                    <li class="page-item {% if not page_obj.has_previous %} disabled {% endif %}">
                         <a class="page-link"
-                           href="{% if products.has_previous %} {% url 'products:paginator' products.previous_page_number %} {% else %} # {% endif %} "
+                           href="{% if page_obj.has_previous %} {% url 'products:paginator' page_obj.previous_page_number %} {% else %} # {% endif %} "
                            tabindex="-1" aria-disabled="true">Предыдущая</a>
                     </li>
-                    {% for page in products.paginator.page_range %}
+                    {% for page in paginator.page_range %}
                     <li class="page-item">
                         <a class="page-link" href="{% url 'products:paginator' page %}">
                             {{ page }}
                         </a>
                     </li>
                     {% endfor %}
-                    <li class="page-item {% if not products.has_next %} disabled {% endif %}">
-                        <a class="page-link" 
-                           href="{% if products.has_next %} {% url 'products:paginator' products.next_page_number %} {% else %} # {% endif %} ">
+                    <li class="page-item {% if not page_obj.has_next %} disabled {% endif %}">
+                        <a class="page-link"
+                           href="{% if page_obj.has_next %} {% url 'products:paginator' page_obj.next_page_number %} {% else %} # {% endif %} ">
                             Следующая</a>
                     </li>
                 </ul>
             </nav>
-
+            {% endif %}
         </div>
 
     </div>
@@ -111,7 +114,7 @@
 {% endblock %}
 
 {% block footer %}
-    <footer class="py-5 bg-dark">
+<footer class="py-5 bg-dark">
     <div class="container">
         <p class="m-0 text-center text-white">Copyright &copy; Store 2023</p>
     </div>
