--- a/store/users/templates/users/login.html
+++ b/store/users/templates/users/login.html
@@ -1,6 +1,5 @@
 {% extends 'users/base.html' %}
-{% load static %}
-{% load socialaccount %}
+{% load static socialaccount %}
 
 {% block content %}
 <main>
