--- a/store/products/templates/products/products.html
+++ b/store/products/templates/products/products.html
@@ -2,7 +2,7 @@
 {% load static cache humanize %}
 
 {% block css %}
-<link href="{% static 'vendor/css/products.css' %}" rel="stylesheet">
+<link href="{% static '.vendor/css/products.css' %}" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
